[package]
name = "routines"
description = "Event checker"
version = "0.1.0"
edition = "2021"
authors = ["Henry Barreto <contato@henrybarreto.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.7.0"
logs = "0.5.0"
